# shuttle-track

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements_dev.txt  setup.cfg
docs/report/bibliography/: references.bib
docs/report/chapters/: declaration.tex  declaration_generative_ai.tex
report/: .gitignore
report/presentation/: RSL_Template_OpenOffice.odp  RSL_Template_Powerpoint.pptx
report/report/: report.fls  report.tex
report/report/chapters/: related_work.tex
runs/detect/custom_yolo_exp/: args.yaml
runs/detect/custom_yolo_exp2/: args.yaml
runs/detect/custom_yolo_exp3/: args.yaml  results.csv
scripts/: convert_25fps.sh  extract_jpg_sh.sh  run_all_files_tracknetv3.sh
shuttle-track/utils/: labelstudio_yolo_converter.py
src/shuttle-track/utils/: labelstudio_framerate_converter.py
src/shuttletrack/models/: train_yolov8.py
src/shuttletrack/models/runs/detect/custom_yolo_exp/: args.yaml
src/shuttletrack/models/runs/detect/custom_yolo_exp2/: args.yaml
src/shuttletrack/utils/: fps_changer.py  labelstudio_yolo_converter.py  show_data.py
tests/: test.py
