[metadata]
name = 
description = 
author = Florentin Dipner
license = AGPL-3.0
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3

[options]
packages =
    shuttle-trac
install_requires =
python_requires = >=3.8
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9

[options.package_data]
slapping = py.typed

[flake8]
max-line-length = 160
